src/assets/scss/custom.scss
/*
*
COMDEX
*                                                           
*/
@import "./variables.scss";

html,
body {
  min-height: 100vh;
  font-family: $font-family;
  text-rendering: optimizeLegibility !important;
  -webkit-font-smoothing: antialiased !important;
  -moz-font-smoothing: antialiased !important;
  color: $text-color-dark;
  font-feature-settings: normal !important;
  font-variant: normal !important;
  font-weight: 300;
  background: $body-background-light !important;
  height: auto !important;
  margin: 0;
  padding: 0;
  &.dark-mode {
    background: $primary-gradient !important;
    color: $white;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

p {
  margin: 0;
}

body.sidebar-open {
  overflow: hidden;
}
label,
button {
  user-select: none;
}
.icon {
  width: 16px;
  height: auto;
  fill: $text-color-dark;
  transition: fill 0.3s;

  &.dark-mode {
    fill: $text-color-light;
  }

  &.icon-white {
    fill: $text-color-light;
  }
}

.mt-15px {
  margin-top: 15px;
}

.cursor-pointer {
  cursor: pointer;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}
.flex {
  display: flex;
}
.main_wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: row;
  align-items: flex-start;

  .main-container {
    width: 80vw;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 0 1 100%;
    position: relative;
    z-index: 1;

    .sidebar-open {
      & ~ .content {
        max-width: calc(100% - 270px);

        @media screen and (max-width: 991px) {
          max-width: 100%;
        }
      }
    }

    .content {
      max-width: 100%;
      padding: 20px 45px 0;
      margin: 0 auto;
      width: 100%;
      display: flex;
      flex-direction: column;
      flex: 0 1 100%;
      transition: none;

      @media screen and (max-width: 1120px) {
        padding-left: 15px;
        padding-right: 15px;
      }

      @media screen and (max-width: 991px) {
        max-width: 100%;
      }

      @media only screen and (max-width: 767px) {
        padding: 20px 15px 0;
      }

      .app-content-wrapper {
        padding-bottom: 30px;
        display: flex;
        flex-direction: column;
        flex: 0 1 100%;
        position: relative;
        z-index: 10;

        .app-content-small {
          width: 100%;
          max-width: 540px;
          margin: auto;
        }
        .card-content-bg {
          border-radius: $base-border-radius;
          background: $background-light;
          box-shadow: $box-shadow-inner-light;
          .dark-mode & {
            background-color: $secondary-color-light;
            box-shadow: none;
          }
        }
      }
    }
  }
}

.comdex-tooltip {
  .ant-tooltip-arrow {
    .ant-tooltip-arrow-content {
      background: $tooltip-bg-light;
      .dark-mode & {
        background: $tooltip-bg-light;
      }
    }
  }

  .ant-tooltip-inner {
    background-color: $tooltip-bg-light !important;
    color: $tooltip-color-dark;
    font-size: $font-size-sm - 2;
    min-height: 20px;
    padding: 2px 3px;
    line-height: 12px;
    border-radius: 3px !important;

    .dark-mode & {
      background-color: $tooltip-bg-light;
      color: $tooltip-color-dark;
    }
  }
}

.ant-btn {
  border: 0;
  font-size: $font-size-base;
  padding: 0 22px;
  color: $white;
  background: $btn-bg-dark;
  border-radius: $base-border-radius;
  cursor: pointer;
  transition: all 300ms ease-in-out;
  height: 36px;
  line-height: 36px;

  &:not(.ant-btn-round) {
    border-radius: 0;
  }

  &.ant-btn-primary,
  &.ant-btn-primary-success {
    cursor: pointer;
    background-color: transparent;
    margin: 0 auto;
    color: $text-color-dark2;
    border-radius: 20px;
    border: 1px solid $secondary-color;
    transition: all 300ms ease-in-out;

    .dark-mode & {
      color: $white;
    }

    &:hover:not(&[disabled]),
    &:active,
    &:focus {
      background-color: $secondary-color;
      color: $white;
      border-color: $secondary-color;
    }

    &[disabled] {
      opacity: 0.7;
      cursor: not-allowed;
      border-color: $secondary-color;
      background-color: $secondary-color;
    }

    &.btn-filled {
      background-color: $secondary-color;
      color: $white;
      text-transform: capitalize;
      &:hover:not(&[disabled]),
      &:active,
      &:focus {
        background-color: rgba($secondary-color, 0.3);
        color: $white;
        border-color: rgba($secondary-color, 0.3);
      }

      &[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
      }
    }
  }

  &.ant-btn-sm {
    height: 28px;
    padding: 0 15px;
    line-height: 100%;
    font-size: $font-size-sm - 1;
    font-weight: 300;
  }

  &.ant-btn-lg {
    padding: 0 22px;
    height: 42px;
    line-height: 42px;
    font-size: $font-size-lg;
    font-weight: 300;
  }

  &.success-btn {
    background: $success-color;
    border-color: $success-color;
    color: $white;
    padding: 0 15px;
    &:hover,
    &:focus {
      background: $success-color;
      border-color: $success-color;
      color: $white;
      opacity: 0.8;
    }
  }

  &.dark-btn {
    background: #232726;
    color: $white;
    border-color: #232726;
    &:hover,
    &:focus {
      background: #232726;
      color: $white;
      border-color: #232726;
      opacity: 0.8;
    }
  }
}
/* ... */

